--- a/src/data/structs/h1/tags/common.yml
+++ b/src/data/structs/h1/tags/common.yml
@@ -22,7 +22,7 @@ type_defs:
     options:
       - name: none
         value: 4294967295
-      - name: null
+      - name: 'null'
         value: 0
       - name: actor
         value: 1633907826
@@ -249,6 +249,7 @@ type_defs:
       - name: w
         type: float
   Point2D:
+    class: struct
     type: struct
     size: 8
     fields:
@@ -257,6 +258,7 @@ type_defs:
       - name: 'y'
         type: float
   Point3D:
+    class: struct
     type: struct
     assert_size: 12
     fields:
