--- a/src/data/structs/h1/tags/continuous_damage_effect.yml
+++ b/src/data/structs/h1/tags/continuous_damage_effect.yml
@@ -1,3 +1,12 @@
-entry_type: !<tag:yaml.org,2002:js/undefined> ''
+entry_type: ContinuousDamageEffect
 imports: {}
-type_defs: {}
+type_defs:
+  ContinuousDamageEffect:
+    class: struct
+    meta:
+      tag_id: 'cdmg'
+    fields:
+      type: pad
+      size: 1
+      comments:
+        en: This type has yet to be documented.
