Fix missing comments in BSP struct

--- a/src/content/h1/map/page.yml
+++ b/src/content/h1/map/page.yml
@@ -14,3 +14,5 @@ thanks:
     en: How maps are loaded into memory
   Kavawuvi:
     en: Map base memory addresses
+  hellux:
+    en: Testing and documenting tag space on Xbox
