--- a/src/content/h1/tags/scenario_structure_bsp/page.yml
+++ b/src/content/h1/tags/scenario_structure_bsp/page.yml
@@ -22,3 +22,5 @@ thanks:
     en: Collision BSP structure and phantom BSP research
   Galap:
     en: Researching the effect of cluster sky index on lighting
+  Hari:
+    en: Collision BSP compilation reversing
