Generate tag structures per tag page

--- a/src/data/structs/h1/tags/spheroid.yml
+++ b/src/data/structs/h1/tags/spheroid.yml
@@ -6,7 +6,7 @@ type_defs:
     meta:
       tag_id: 'boom'
     fields:
-      type: pad
-      size: 1
-      comments:
-        en: This type has yet to be documented.
+      - type: pad
+        size: 1
+        comments:
+          en: This type has yet to be documented.
