--- a/src/data/workflows.yml
+++ b/src/data/workflows.yml
@@ -75,6 +75,11 @@ workflowItems:
     page: halo-physics-importer
     authors:
       - rec0
+  Assembly:
+    page: assembly
+    authors:
+      - Assembly Contributors
+      - XboxChaos
   HEK:
     page: hek
     authors:
