Gather tag dependencies using struct data, render tag structs without parent fields

--- a/src/data/structs/h1/tags/globals.yml
+++ b/src/data/structs/h1/tags/globals.yml
@@ -786,6 +786,7 @@ type_defs:
         type: TagDependency
         meta:
           tag_classes:
+            - gbxmodel
             - model
         comments:
           en: >-
