--- a/src/data/structs/h1/tags/sky.yml
+++ b/src/data/structs/h1/tags/sky.yml
@@ -82,6 +82,7 @@ type_defs:
         type: TagDependency
         meta:
           tag_classes:
+            - gbxmodel
             - model
       - name: animation_graph
         type: TagDependency
