--- a/src/data/structs/h1/tags/object.yml
+++ b/src/data/structs/h1/tags/object.yml
@@ -265,6 +265,7 @@ type_defs:
         type: TagDependency
         meta:
           tag_classes:
+            - gbxmodel
             - model
       - name: animation_graph
         type: TagDependency
