Reorganize string list and hud message text info

--- a/src/content/h1/tags/hud_message_text/page.yml
+++ b/src/content/h1/tags/hud_message_text/page.yml
@@ -2,3 +2,6 @@ title:
   en: hud_message_text
 stub: true
 tagName: hud_message_text
+img: hmt.jpg
+imgCaption:
+  en: Level objectives are one use of this tag.
