Add HAC2 page and AI follow behaviour trip

--- a/src/content/h1/engine/ai/page.yml
+++ b/src/content/h1/engine/ai/page.yml
@@ -10,4 +10,4 @@ thanks:
   Kornman00:
     en: Overview of AI pathfinding system
   gbMichelle:
-    en: Discovering max pathfinding distance
+    en: Discovering max pathfinding distance, following behaviour with firing positions
